; ModuleID = '/home/carl/AnghaBench/ish/kernel/extr_resource.c_sys_setrlimit32.c'
source_filename = "/home/carl/AnghaBench/ish/kernel/extr_resource.c_sys_setrlimit32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rlimit_ = type { i32, i32 }

@_EFAULT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"setrlimit(%d, {cur=%#x, max=%#x})\00", align 1
@current = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sys_setrlimit32(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.rlimit_, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  %9 = bitcast %struct.rlimit_* %6 to i64*
  %10 = load i64, i64* %9, align 4
  %11 = call i64 @user_get(i32 %8, i64 %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  %14 = load i32, i32* @_EFAULT, align 4
  store i32 %14, i32* %3, align 4
  br label %36

15:                                               ; preds = %2
  %16 = load i32, i32* %4, align 4
  %17 = getelementptr inbounds %struct.rlimit_, %struct.rlimit_* %6, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = getelementptr inbounds %struct.rlimit_, %struct.rlimit_* %6, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @STRACE(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i32 %16, i32 %18, i32 %20)
  %22 = load i32, i32* %4, align 4
  %23 = bitcast %struct.rlimit_* %6 to i64*
  %24 = load i64, i64* %23, align 4
  %25 = call i32 @check_setrlimit(i32 %22, i64 %24)
  store i32 %25, i32* %7, align 4
  %26 = load i32, i32* %7, align 4
  %27 = icmp slt i32 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %15
  %29 = load i32, i32* %7, align 4
  store i32 %29, i32* %3, align 4
  br label %36

30:                                               ; preds = %15
  %31 = load i32, i32* @current, align 4
  %32 = load i32, i32* %4, align 4
  %33 = bitcast %struct.rlimit_* %6 to i64*
  %34 = load i64, i64* %33, align 4
  %35 = call i32 @rlimit_set(i32 %31, i32 %32, i64 %34)
  store i32 %35, i32* %3, align 4
  br label %36

36:                                               ; preds = %30, %28, %13
  %37 = load i32, i32* %3, align 4
  ret i32 %37
}

declare dso_local i64 @user_get(i32, i64) #1

declare dso_local i32 @STRACE(i8*, i32, i32, i32) #1

declare dso_local i32 @check_setrlimit(i32, i64) #1

declare dso_local i32 @rlimit_set(i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
